<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvWellcome"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/well_come" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStreetNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_name" />

            <EditText
                android:id="@+id/etStreetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:hint="@string/route_hint" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
        
    </LinearLayout>

            <Button 
            android:id="@+id/btMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"/>
    
	<LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
	    <TextView
	        android:id="@+id/tvResultsTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/results" />
	    
	    <ListView
	        android:id="@+id/lvResultRoutes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:scrollbarStyle="insideInset"
	        
	        >
	    </ListView>
	    
	</LinearLayout>

</LinearLayout>